--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,67 @@
 /* font-family: 'Playfair Display', serif;
 font-family: 'Poppins', sans-serif;
 */
+:root {
+  --branding-color: #6c63ff;
+  --secondary-color: #f9f7fe;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+}
+
+body {
+  font-family: var(--default-font-family);
+  margin: 0;
+}
 
 h1 {
-  font-family: "Playfair Display", serif;
+  display: block;
+  font-family: var(--heading-font-family);
   font-weight: bold;
   color: black;
+  font-size: 96px;
+}
+
+h2 {
+  display: block;
 }
 
 p {
-  font-family: "Poppins", sans-serif;
-  font-weight: normal;
+  display: block;
+}
+
+.hero {
+  background-color: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+  color: #272142;
+}
+
+.hero h2 {
+  font-weight: bold;
+  line-height: 2;
+  font-size: 24px;
+}
+
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
+.btn-branding {
+  background: var(--branding-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
