--- a/src/style.css
+++ b/src/style.css
@@ -55,13 +55,18 @@ p {
   text-decoration: none;
   vertical-align: middle;
   cursor: pointer;
+  border-radius: 4 px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15 px 30px;
 }
 
 .btn-branding {
   background: var(--branding-color);
-  border-radius: 4px;
   color: white;
-  font-size: 18px;
-  line-height: 27px;
-  padding: 15px 30px;
+}
+
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
 }
