--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,3 @@
-/* font-family: 'Playfair Display', serif;
-font-family: 'Poppins', sans-serif;
-*/
 :root {
   --branding-color: #6c63ff;
   --secondary-color: #f9f7fe;
@@ -54,22 +51,34 @@ p {
   line-height: 1.5;
   font-size: 24px;
 }
-.about-section {
+
+.content-container {
   padding: 160px 20px;
 }
 
-.about-section h1 {
+.content {
+  margin: 30px;
+}
+
+.content h1 {
   font-size: 64px;
   line-height: 80px;
 }
 
-.about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
 
-.about-section-content {
-  margin: 30px;
+.content h3 {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.5;
+  margin: 20px 0 0;
+}
+
+.content p {
+  font-size: 14px;
 }
 
 .img bass-face {
@@ -116,7 +125,7 @@ p {
   h2 {
     font-size: 44px;
   }
-  .about-section {
+  .content {
     text-align: center;
     padding: 0;
   }
