--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,43 @@ p {
   line-height: 30px;
 }
 
+nav {
+  padding: 20px;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  margin-left: 15px;
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+
+nav a:hover,
+nav li.active a {
+  color: var(--branding-color);
+}
+
+.logo {
+  max-height: 40px;
+}
+
+.logo-small {
+  max-height: 64px;
+  margin: 0;
+  padding: 0;
+}
+
 .hero {
   background-color: var(--secondary-color);
   text-align: center;
@@ -43,6 +80,7 @@ p {
   font-size: 36px;
   font-weight: bold;
   margin: 0;
+
   color: #272142;
 }
 
@@ -50,10 +88,6 @@ p {
   font-weight: bold;
   line-height: 1.5;
   font-size: 24px;
-}
-
-.content-container {
-  padding: 160px 20px;
 }
 
 .content {
@@ -112,6 +146,9 @@ p {
   body {
     text-align: center;
   }
+  nav {
+    font-size: 12px;
+  }
   .hero {
     padding: 80px 10px;
   }
@@ -123,10 +160,11 @@ p {
     line-height: 2;
   }
   h2 {
-    font-size: 44px;
+    font-size: 34px;
   }
   .content {
     text-align: center;
+    margin: 0;
     padding: 0;
   }
 }
