--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,10 @@ h2 {
   font-size: 64px;
 }
 
+h4 {
+  font-size: 48px;
+}
+
 p {
   display: block;
   font-size: 18px;
@@ -142,26 +146,76 @@ nav li.active a {
   border: 1px solid var(--branding-color);
 }
 
+footer {
+  margin: 60px 0;
+}
+
+footer .contact-box {
+  background: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+footer .contact-box {
+  margin: 0;
+}
+
+footer .email-link {
+  text-decoration: none;
+  text-align: center;
+  font-size: 24px;
+  color: black;
+}
+
+footer .email-link:hover {
+  color: var(--branding-color);
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background: var(--secondary-color);
+  padding: 10px 15px;
+  font-size: 18px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background: var(--branding-color);
+}
+
 @media (max-width: 900px) {
   body {
     text-align: center;
   }
+
   nav {
     font-size: 12px;
   }
+
   .hero {
-    padding: 80px 10px;
+    padding: 80px 20px;
   }
+
   .hero p {
     font-size: 24px;
   }
+
   h1 {
     font-size: 44px;
-    line-height: 2;
+    line-height: 1.5;
   }
+
   h2 {
     font-size: 34px;
   }
+
+  h4 {
+    font-size: 26px;
+  }
+
   .content {
     text-align: center;
     margin: 0;
